@@ -230,6 +230,8 @@ CSceneManager::CSceneManager(video::IVideoDriver* driver, io::IFileSystem* fs,
 	// root node's scene manager
 	SceneManager = this;
 
+	setTransparentNodeSorting(ETNS_DEFAULT);
+
 	if (Driver)
 		Driver->grab();
 
@@ -1362,14 +1364,14 @@ u32 CSceneManager::registerNodeForRendering(ISceneNode* node, E_SCENE_NODE_RENDE
 	case ESNRP_TRANSPARENT:
 		if (!isCulled(node))
 		{
-			TransparentNodeList.push_back(TransparentNodeEntry(node, camWorldPos));
+			TransparentNodeList.push_back(TransparentNodeEntry(node, funcTransparentNodeDistance(node, camWorldPos)));
 			taken = 1;
 		}
 		break;
 	case ESNRP_TRANSPARENT_EFFECT:
 		if (!isCulled(node))
 		{
-			TransparentEffectNodeList.push_back(TransparentNodeEntry(node, camWorldPos));
+			TransparentEffectNodeList.push_back(TransparentNodeEntry(node, funcTransparentNodeDistance(node, camWorldPos)));
 			taken = 1;
 		}
 		break;
@@ -1384,7 +1386,7 @@ u32 CSceneManager::registerNodeForRendering(ISceneNode* node, E_SCENE_NODE_RENDE
 				if (Driver->needsTransparentRenderPass(node->getMaterial(i)))
 				{
 					// register as transparent node
-					TransparentNodeEntry e(node, camWorldPos);
+					TransparentNodeEntry e(node, funcTransparentNodeDistance(node, camWorldPos));
 					TransparentNodeList.push_back(e);
 					taken = 1;
 					break;
@@ -1664,7 +1666,8 @@ void CSceneManager::drawAll()
 		CurrentRenderPass = ESNRP_TRANSPARENT;
 		Driver->getOverrideMaterial().Enabled = ((Driver->getOverrideMaterial().EnablePasses & CurrentRenderPass) != 0);
 
-		TransparentNodeList.sort(); // sort by distance from camera
+		if ( TransparentNodeSorting != ETNS_NONE )
+			TransparentNodeList.sort(); // sort by distance from camera
 		if (LightManager)
 		{
 			LightManager->OnRenderPassPreRender(CurrentRenderPass);
@@ -1698,7 +1701,8 @@ void CSceneManager::drawAll()
 		CurrentRenderPass = ESNRP_TRANSPARENT_EFFECT;
 		Driver->getOverrideMaterial().Enabled = ((Driver->getOverrideMaterial().EnablePasses & CurrentRenderPass) != 0);
 
-		TransparentEffectNodeList.sort(); // sort by distance from camera
+		if ( TransparentNodeSorting != ETNS_NONE )
+			TransparentEffectNodeList.sort(); // sort by distance from camera
 
 		if (LightManager)
 		{
@@ -2191,6 +2195,70 @@ E_SCENE_NODE_RENDER_PASS CSceneManager::getSceneNodeRenderPass() const
 	return CurrentRenderPass;
 }
 
+// Not sorting this later
+static f32 transparentSortingNone(const ISceneNode* node, const core::vector3df& camera)
+{
+	return 0.f;
+}
+
+// Distance from node origin to camera
+static f32 transparentSortingByOrigin(const ISceneNode* node, const core::vector3df& camera)
+{
+	return node->getAbsolutePosition().getDistanceFromSQ(camera);
+}
+
+// Distance from node center to camera
+static f32 transparentSortingByCenter(const ISceneNode* node, const core::vector3df& camera)
+{
+	core::vector3df center = node->getBoundingBox().getCenter();
+	const core::matrix4& absMat = node->getAbsoluteTransformation();
+	absMat.rotateVect(center);
+	return (absMat.getTranslation()+center).getDistanceFromSQ(camera);
+}
+
+/*
+const core::aabbox3d<f32> box = Node->getTransformedBoundingBox();
+Distance = core::min_(camera.getDistanceFromSQ(box.MinEdge), camera.getDistanceFromSQ(box.MaxEdge));
+*/
+static f32 transparentSortingBBoxExtents(const ISceneNode* node, const core::vector3df& camera)
+{
+	const core::aabbox3d<f32>& box = node->getBoundingBox();
+	const f32* m = node->getAbsoluteTransformation().pointer();
+
+	f32 p[4];
+	p[0] = camera.X - (box.MinEdge.X * m[0] + box.MinEdge.Y * m[4] + box.MinEdge.Z * m[8] + m[12]);
+	p[1] = camera.Y - (box.MinEdge.X * m[1] + box.MinEdge.Y * m[5] + box.MinEdge.Z * m[9] + m[13]);
+	p[2] = camera.Z - (box.MinEdge.X * m[2] + box.MinEdge.Y * m[6] + box.MinEdge.Z * m[10] + m[14]);
+	f32 l0 = (p[0] * p[0]) + (p[1] * p[1]) + (p[2] * p[2]);
+
+	p[0] = camera.X - (box.MaxEdge.X * m[0] + box.MaxEdge.Y * m[4] + box.MaxEdge.Z * m[8] + m[12]);
+	p[1] = camera.Y - (box.MaxEdge.X * m[1] + box.MaxEdge.Y * m[5] + box.MaxEdge.Z * m[9] + m[13]);
+	p[2] = camera.Z - (box.MaxEdge.X * m[2] + box.MaxEdge.Y * m[6] + box.MaxEdge.Z * m[10] + m[14]);
+	f32 l1 = (p[0] * p[0]) + (p[1] * p[1]) + (p[2] * p[2]);
+	return core::min_(l0, l1);
+}
+
+void CSceneManager::setTransparentNodeSorting(E_TRANSPARENT_NODE_SORTING sorting)
+{
+	TransparentNodeSorting = sorting;
+	switch ( TransparentNodeSorting )
+	{
+		case ETNS_NONE:	
+			funcTransparentNodeDistance = transparentSortingNone; 
+			break;
+		case ETNS_ORIGIN: 
+			funcTransparentNodeDistance = transparentSortingByOrigin; 
+			break;
+		case ETNS_CENTER: 
+			funcTransparentNodeDistance = transparentSortingByCenter; 
+			break;
+		case ETNS_BBOX_EXTENTS: 
+			funcTransparentNodeDistance = transparentSortingBBoxExtents; 
+			break;
+		default:
+			break;
+	}
+}
 
 //! Returns an interface to the mesh cache which is shared between all existing scene managers.
 IMeshCache* CSceneManager::getMeshCache()
